# RagHubMCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RULE.md  TODO.md
backend/: .env.example  config.yaml  openapi.yaml  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  benchmark.py  config.py  index.py  pipeline_adapter.py  router.py  schemas.py  search.py  websocket.py
backend/src/auth/: __init__.py  dependencies.py  models.py  security.py
backend/src/chunkers/: __init__.py  ast_base.py  base.py  go_ast.py  line.py  markdown.py  python_ast.py  registry.py  simple.py  typescript_ast.py
backend/src/cli/: __init__.py  migrate.py
backend/src/common/: __init__.py  registry.py
backend/src/graph/: __init__.py  base.py  call_graph_builder.py  dependency_analyzer.py  graph_store.py
backend/src/indexer/: __init__.py  incremental.py  indexer.py  scanner.py  watcher.py
backend/src/mcp/tools/: __init__.py
backend/src/mcp_server/: __init__.py  server.py
backend/src/mcp_server/tools/: __init__.py  _errors.py  base.py  benchmark.py  hybrid.py  migrate.py  rerank.py  search.py  watcher.py
backend/src/mcp_server/tools/v2/: __init__.py
backend/src/pipeline/: __init__.py  base.py  context_builder.py  default.py  factory.py  manager.py  options.py  reranker.py  result.py  retriever.py
backend/src/providers/: __init__.py  base.py  factory.py  registry.py
backend/src/providers/embedding/: __init__.py  base.py  http.py  ollama.py
backend/src/providers/llm/: __init__.py  base.py  ollama.py
backend/src/providers/rerank/: __init__.py  base.py  flashrank.py
backend/src/providers/vectorstore/: __init__.py  base.py  chroma.py  qdrant.py
backend/src/services/: __init__.py  bm25_service.py  chroma_service.py  hybrid_search.py
backend/src/utils/: __init__.py  config.py  container.py  errors.py  migrate.py  scoring.py  singleton.py
backend/src/webhook/: __init__.py  handler.py
backend/tests/: conftest.py  test_init.py
backend/tests/test_api/: __init__.py  test_api.py  test_index_security.py  test_schemas.py  test_websocket.py
backend/tests/test_auth/: __init__.py  test_auth.py
backend/tests/test_chunkers/: __init__.py  test_ast_chunkers.py  test_base.py  test_line.py  test_markdown.py  test_registry.py  test_simple.py
backend/tests/test_cli/: test_migrate.py
backend/tests/test_evaluation/: metrics.py  test_questions.py
backend/tests/test_graph/: __init__.py  test_graph.py
backend/tests/test_indexer/: __init__.py  test_incremental.py  test_indexer.py  test_scanner.py  test_watcher.py
backend/tests/test_integration/: __init__.py  test_e2e.py  test_index_search.py  test_mcp_api.py
backend/tests/test_mcp_server/: __init__.py  test_benchmark_tool.py  test_errors.py  test_rerank_tool.py  test_search_tool.py  test_server.py  test_v2_tools.py
backend/tests/test_pipeline/: test_context_builder_merge.py  test_hybrid_retriever.py  test_pipeline.py  test_pipeline_context_builder.py  test_pipeline_manager.py  test_pipeline_options.py  test_reranker.py  test_retriever.py  test_vector_retriever.py
backend/tests/test_providers/: __init__.py  test_base.py  test_factory.py  test_flashrank.py  test_http_embedding.py  test_llm_base.py  test_ollama_embedding.py  test_registry.py
backend/tests/test_services/: test_bm25_service.py  test_chroma_service.py  test_hybrid_search.py
backend/tests/test_utils/: __init__.py  test_config_validation.py  test_container.py  test_errors.py  test_migrate.py  test_scoring.py  test_singleton.py
backend/tests/test_webhook/: __init__.py  test_webhook.py
(+102 files in other folders)
