[project]
name = "raghub-mcp"
version = "0.1.0"
description = "通用代码 RAG 中枢 - MCP Server + FlashRank Rerank"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AIRix315"}
]
keywords = ["rag", "mcp", "rerank", "code-search", "embedding"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "modelcontextprotocol>=0.1.0",
    "chromadb>=0.4.22",
    "ollama>=0.1.0",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "flashrank>=0.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "watchdog>=4.0.0",
    "bm25s>=0.3.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "qdrant-client>=1.7.0",
    "networkx>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

# Optional dependencies for graph features
graph = [
    "neo4j>=5.0.0",
]

# Optional dependencies for enterprise features
enterprise = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pygithub>=2.0.0",
]

[project.scripts]
raghub-mcp = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    # Ignore ChromaDB deprecation warnings from third-party library
    "ignore::DeprecationWarning:chromadb.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true